test/classes/casts/argumentCoerce_Const/error/from-shared-Child-nilable-to-owned-Parent.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from shared Child? to owned Parent
proc bar(const x: owned Parent) {}
proc foo() {
  var a = new shared Child?();
  bar(a);
}
proc main() {
  foo();
}
